src/css/style.css
* {
  box-sizing: border-box;
  margin: 0;
}

body {
  height: 100vh;
  background-color: lightpink;
  font-family: 'Roboto', sans-serif;
  color: #100c08;
  font-size: 16px;
  display: flex;
  overflow: hidden;
}

canvas {
  height: 100%;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.container {
  max-width: 1600px;
  width: 100%;
  padding: 0 50px;
  margin: 0 auto;
}

.widget {
  width: 100%;
  display: flex;
}

.widget__header-main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-shrink: 0;
  flex-grow: 1;
}

.widget__aside-wrapper {
  width: 0px;
  background-color: white;
  overflow-x: hidden;
  transition: width .2s ease-in-out;
}

.widget__aside-wrapper_opened {
  width: 320px;
}

.aside {
  height: 100%;
  padding: 20px 25px;
  border-left: #ABABAB 1px solid;
}

.aside__name-close {
  margin-bottom: 25px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.aside__name {
  margin: 0;
  font-size: 18px;
}

.aside__close {
  padding: 0;
  display: flex;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.aside__close svg {
  width: 24px;
  height: 24px;
}

.aside__list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.aside__item {
  margin-bottom: 15px;
}

.aside__item:last-child {
  margin-bottom: 0;
}

.aside__item-btn {
  padding: 0;
  display: flex;
  align-items: center;
  border: none;
  background-color: transparent;
  cursor: pointer;
  font-size: inherit;
}

.aside__item-svg_clicked path {
  stroke: #DC7388;
}

.aside__item-text_clicked {
  color: #DC7388;
  font-weight: 700;
}

.aside__item svg {
  width: 24px;
  height: 24px;
  margin-right: 20px;
}

.aside__item-text {
  font-size: inherit;
}

.sidebar-opened {
  stroke: #DC7388;
}

.header {
  min-height: 75px;
  padding: 15px 0;
  background-color: white;
  border-bottom: #ABABAB 1px solid;
}

.header__wrapper {
  display: flex;
  align-items: center;
}

.header__user-svg {
  width: 32px;
  height: 32px;
  margin-right: 10px;
}

.header__text {
  display: flex;
  flex-direction: column;
}

.header__bot-name {
  color: #ABABAB;
}

.header__name {
  margin: 0;
  font-size: 21px;
}

.header__list {
  margin: 0;
  margin-left: auto;
  padding: 0;
  display: flex;
  align-items: center;
  list-style-type: none;
}

.header__item {
  margin-right: 20px;
}

.header__item:last-child {
  margin-right: 0;
}

.header__search-btn {
  transition: margin-right .2s ease-in-out;
}

.header__search-btn_opened {
  margin-right: 10px;
}

.header__form {
  position: relative;
  display: flex;
  align-items: center;
}

.header__btn {
  padding: 0;
  display: flex;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.header__btn svg {
  width: 24px;
  height: 24px;
}

.header__input-container {
  overflow-x: hidden;
  transition: max-width .2s ease-in-out;
}

.header__input {
  border: none;
  padding: 0;
  padding-bottom: 2px;
  font-size: inherit;
  border-bottom: #ABABAB 2px solid;
}

.header__input::placeholder {
  font-size: inherit;
  color: #ABABAB
}

.header__input:focus-visible {
  outline: none;
}

.main {
  position: relative;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow-y: hidden;
}

.main::after {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  background-image: url('../img/background.png');
  opacity: 0.15;
  z-index: -1;
}

.pinned {
  padding: 15px 0;
  width: 100%;
  position: absolute;
  top: 0;
  background-color: white;
  border-bottom: #ABABAB 1px solid;
}

.pinned__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.pinned__info {
  position: relative;
  display: flex;
}

.pinned__info::before {
  content: '';
  position: absolute;
  left: -10px;
  height: 100%;
  width: 2.5px;
  background-color: #DC7388;
}

.pinned__content-wrapper {
  width: 50px;
  height: 50px;
  margin-right: 10px;
  display: flex;
  align-items: center;
  border: #ABABAB 1px solid;
  overflow: hidden;
}

.pinned__content {
  min-width: 100%;
  text-align: center;
  font-size: 10px;
}

.pinned__text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.pinned__img-wrapper {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  overflow: hidden;
}

.pinned__img {
  height: 100%;
}

.pinned__video-wrapper {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  overflow: hidden;
}

.pinned__video {
  height: 100%;
}

.pinned__name {
  display: block;
  margin: 0;
  margin-bottom: 3px;
  font-size: 17px;
}

.pinned__name a {
  color: #DC7388;
  text-decoration: none;
}

.pinned__close-btn {
  padding: 0;
  display: flex;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.pinned__close-btn svg {
  width: 24px;
  height: 24px;
}

.pinned__file {
  width: 50px;
  height: 50px;
  margin-right: 10px;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: lightpink;
  border-radius: 100%;
}

.pinned__file svg {
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main__messages-wrapper {
  height: 100%;
  display: flex;
  padding: 10px 0;
  overflow: hidden;
}

.main__messages-scroll-wrapper {
  overflow-y: auto;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.simplebar-track.simplebar-vertical .simplebar-scrollbar::before {
  background-color: #9a9a9a;
}

.simplebar-placeholder {
  width: auto !important;
}

.main__messages {
  margin: 0;
  margin-top: auto;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  list-style-type: none;
}
/* ... */

